[gd_scene load_steps=9 format=3 uid="uid://cy8jx3xh7dlgo"]

[ext_resource type="Script" path="res://scripts/minigames/chase/chase_enemy.gd" id="1_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3efm"]
radius = 16.0

[sub_resource type="Animation" id="Animation_wh2xo"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.223529, 0.85098, 0.317647, 1)]
}

[sub_resource type="Animation" id="Animation_68xv2"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.223529, 0.85098, 0.317647, 1), Color(0.160784, 0.639216, 0.231373, 1)]
}

[sub_resource type="Animation" id="Animation_m5vlh"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.223529, 0.85098, 0.317647, 1), Color(0.160784, 0.639216, 0.231373, 1)]
}

[sub_resource type="Animation" id="Animation_12eo2"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.223529, 0.85098, 0.317647, 1), Color(0.160784, 0.639216, 0.231373, 1)]
}

[sub_resource type="Animation" id="Animation_3oqh7"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.223529, 0.85098, 0.317647, 1), Color(0.160784, 0.639216, 0.231373, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q1kyx"]
_data = {
"idle": SubResource("Animation_wh2xo"),
"walk_down": SubResource("Animation_68xv2"),
"walk_left": SubResource("Animation_m5vlh"),
"walk_right": SubResource("Animation_12eo2"),
"walk_up": SubResource("Animation_3oqh7")
}

[node name="ChaseSlime" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_script")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r3efm")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.223529, 0.85098, 0.317647, 1)
scale = Vector2(0.25, 0.25)

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.85098, 0.317647, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q1kyx")
}
autoplay = "idle"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_r3efm")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"] 